--- a/src/main/resources/AfficherReservations.fxml
+++ b/src/main/resources/AfficherReservations.fxml
@@ -12,57 +12,58 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="734.0" prefWidth="1281.0" style="-fx-background-color: #f4f6f9;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherReservationsController">
+<AnchorPane prefHeight="600.0" prefWidth="1307.0" style="-fx-background-color: #f4f6f9;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AfficherReservationsController">
     <stylesheets>
         <URL value="@/styles.css" />
     </stylesheets>
 
     <children>
-        <HBox alignment="CENTER_LEFT" prefHeight="80.0" prefWidth="760.0" style="-fx-background-color: white;">
+        <VBox prefHeight="600.0" prefWidth="760.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <Label styleClass="form-title" text="Liste des Réservations">
-                    <HBox.margin>
-                        <Insets left="25.0" />
-                    </HBox.margin>
-                </Label>
-                <Region HBox.hgrow="ALWAYS" />
-                <TextField fx:id="searchField" onKeyReleased="#filterReservations" prefHeight="40.0" prefWidth="250.0" promptText="Rechercher une réservation..." styleClass="form-field">
-                    <HBox.margin>
-                        <Insets right="15.0" />
-                    </HBox.margin>
-                </TextField>
-                <Button fx:id="refreshButton" onAction="#refreshList" prefHeight="40.0" prefWidth="120.0" styleClass="secondary-button" text="Actualiser">
-                    <HBox.margin>
-                        <Insets right="25.0" />
-                    </HBox.margin>
-                </Button>
-            </children>
-            <effect>
-                <DropShadow color="#00000033" height="10.0" radius="4.5" width="10.0" />
-            </effect>
-        </HBox>
-
-        <HBox alignment="CENTER_LEFT" prefHeight="50.0" style="-fx-background-color: #f4f6f9;">
-            <children>
-                <Label styleClass="form-label" text="Réservations enregistrées">
-                    <HBox.margin>
-                        <Insets left="25.0" />
-                    </HBox.margin>
-                </Label>
-            </children>
-            <VBox.margin>
-                <Insets top="20.0" />
-            </VBox.margin>
-        </HBox>
-
-        <ScrollPane fitToWidth="true" prefHeight="550.0" prefWidth="760.0" style="-fx-background-color: #f4f6f9;" VBox.vgrow="ALWAYS">
-            <content>
-                <AnchorPane fx:id="reservationsContainer" prefWidth="760.0" style="-fx-background-color: #f4f6f9;">
+                <HBox alignment="CENTER_LEFT" prefHeight="80.0" prefWidth="792.0" style="-fx-background-color: white; -fx-background-radius: 10;">
                     <children>
-                        <VBox fx:id="reservationsList" spacing="0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="10.0" />
+                        <Label styleClass="form-title" text="Liste des Réservations">
+                            <HBox.margin>
+                                <Insets left="25.0" />
+                            </HBox.margin>
+                        </Label>
+                        <Region HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="searchField" onKeyReleased="#filterReservations" prefHeight="40.0" prefWidth="250.0" promptText="Rechercher une réservation..." styleClass="form-field">
+                            <HBox.margin>
+                                <Insets right="15.0" />
+                            </HBox.margin>
+                        </TextField>
+                        <Button fx:id="refreshButton" onAction="#refreshList" prefHeight="40.0" prefWidth="120.0" styleClass="secondary-button" text="Actualiser">
+                            <HBox.margin>
+                                <Insets right="25.0" />
+                            </HBox.margin>
+                        </Button>
                     </children>
-                </AnchorPane>
-            </content>
-        </ScrollPane>
+                    <effect>
+                        <DropShadow color="#00000033" height="10.0" radius="4.5" width="10.0" />
+                    </effect>
+                </HBox>
+
+                <HBox alignment="CENTER_LEFT" prefHeight="48.0" prefWidth="787.0" style="-fx-background-color: transparent;">
+                    <children>
+                        <Label styleClass="form-label" text="Réservations enregistrées">
+                            <HBox.margin>
+                                <Insets left="25.0" />
+                            </HBox.margin>
+                        </Label>
+                    </children>
+                </HBox>
+
+                <ScrollPane fitToWidth="true" prefHeight="469.0" prefWidth="812.0" style="-fx-background-color: transparent;" VBox.vgrow="ALWAYS">
+                    <content>
+                        <AnchorPane fx:id="reservationsContainer" prefHeight="18.0" prefWidth="860.0" style="-fx-background-color: transparent;">
+                            <children>
+                                <VBox fx:id="reservationsList" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="10.0" />
+                            </children>
+                        </AnchorPane>
+                    </content>
+                </ScrollPane>
+            </children>
+        </VBox>
     </children>
-</VBox>
+</AnchorPane>
