--- a/src/main/resources/MenuPrincipale.fxml
+++ b/src/main/resources/MenuPrincipale.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="760.0" style="-fx-background-color: #f4f6f9;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuPrincipalController">
+<AnchorPane prefHeight="700.0" prefWidth="1009.0" style="-fx-background-color: #f4f6f9;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuPrincipalController">
     <stylesheets>
         <URL value="@flightstyle.css" />
     </stylesheets>
@@ -17,7 +17,7 @@
                 <!-- Header with buttons -->
                 <HBox alignment="CENTER" spacing="20.0" style="-fx-background-color: white; -fx-padding: 15;">
                     <children>
-                        <Button fx:id="btnAfficher" mnemonicParsing="false" onAction="#ouvrirAfficher" prefHeight="40.0" prefWidth="180.0" styleClass="button-white-border" text="Afficher Vols">
+                        <Button fx:id="btnAfficher" mnemonicParsing="false" onAction="#ouvrirAfficher" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: e7a2a2;" styleClass="button-white-border" text="Afficher Vols">
                             <font>
                                 <Font size="14.0" />
                             </font>
@@ -27,7 +27,7 @@
                                 <Font size="14.0" />
                             </font>
                         </Button>
-                        <Button fx:id="btnAjouter" mnemonicParsing="false" onAction="#ouvrirAjouter" prefHeight="40.0" prefWidth="180.0" styleClass="button-white-border" text="Ajouter Vol">
+                        <Button fx:id="btnAjouter" mnemonicParsing="false" onAction="#ouvrirAjouter" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: e7a2a2;" styleClass="button-white-border" text="Ajouter Vol" textFill="#181818">
                             <font>
                                 <Font size="14.0" />
                             </font>
@@ -36,7 +36,7 @@
                 </HBox>
 
                 <!-- Content area -->
-                <AnchorPane fx:id="contentArea" prefHeight="600.0" prefWidth="760.0" style="-fx-background-color: white; -fx-background-radius: 10; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 10, 0, 0, 5);" VBox.vgrow="ALWAYS" />
+                <AnchorPane fx:id="contentArea" prefHeight="610.0" prefWidth="882.0" style="-fx-background-color: white; -fx-background-radius: 10; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.1), 10, 0, 0, 5);" VBox.vgrow="ALWAYS" />
             </children>
         </VBox>
     </children>
